...
              />
            ),
          }}
        >
          <Stack.Screen
            name="index"
            options={{ title: i18n.t('settings') || 'Settings' }}
          />
          <Stack.Screen
            name="manageAccount"
            options={{ title: i18n.t('profile_settings') || 'Profile' }}
          />
          <Stack.Screen
            name="manageData"
            options={{ title: i18n.t('manage_data') || 'Manage Data' }}
          />
          <Stack.Screen
...
